added basic db code; enabled mysql on docker;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=organizer-app-data-service-ms
 server.port=8000
+
+#Database Connection Configs
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://root:dummypassword@0.0.0.0:3306/todos
+spring.datasource.username=todos-user
+spring.datasource.password=dummytodos
