--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=organizer-app-data-service-ms
-server.port=8000
+server.port=8081
 
 #Database Connection Configs
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:dummypassword@0.0.0.0:3306/todos
-spring.datasource.username=todos-user
-spring.datasource.password=dummytodos
+#Docker is running on 192.168.99.100 with mysql container
+spring.datasource.url=jdbc:mysql://root:dummypassword@192.168.99.100:3306/todos
+#spring.datasource.username=todos-user
+#spring.datasource.password=dummytodos
+
+#Eureka Naming Server Config
+#temporarily disabling the eureka naming server client discovery
+#else it will throw exception if Eureka Naming Server not running
+eureka.client.enabled=false
