disabled zipkin to avoid exception; Entities (ToDoListItem & ToDoMasterListItem) updated with @Table annotations with DB table names; updated ToDoController to work as REST API; commented saveAll() method temporarily for ToDoListRepository & ToDoMasterListRepository; removed todoRepo code from main() method;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.url=jdbc:mysql://root:dummypassword@192.168.99.100:3306/todos
 #temporarily disabling the eureka naming server client discovery
 #else it will throw exception if Eureka Naming Server not running
 eureka.client.enabled=false
+
+#Zipkin Config
+spring.zipkin.enabled=false
